--- a/templates/navibar.html
+++ b/templates/navibar.html
@@ -150,7 +150,7 @@
                 <li> | </li>
                 <li><a href="#">Parking Map</a></li>
                 <li> | </li>
-                <li><a href="{{ url_for('nologin_about_us') }}">About Us</a></li>
+                <li><a href="{{ url_for('about') }}">About Us</a></li>
             {% endif %}
         </ul>
 
